made some minor changes